# rust-mermo

./: .env  .env.example  .gitignore  Cargo.toml
src/: lib.rs  main.rs  middleware.rs  path.rs
src/controller/: auth.rs  login.rs  logout.rs  mod.rs  product.rs  register.rs  spare_part.rs  welcome.rs
src/helper/: mod.rs  parse.rs  response.rs
