[package]
name = "mermo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.10.1"
time = "0.2.23"
chrono = "0.4.19"
tide = "0.16.0"
jsonwebtoken = "7.2.0"
async-std = { version = "1.12.0", features = [ "attributes" ] }
sqlx = { version = "0.4", features = [ "runtime-async-std-native-tls", "postgres" ] }
dotenv = "0.15"
futures-util = "0.3"
regex = "1.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
calamine = "0.18"